--- a/install
+++ b/install
@@ -9,9 +9,7 @@ case "$TARGETPLATFORM" in
     "linux/amd64")
         INSTALLER="s6-overlay-amd64-installer"
         ;;
-    "linux/arm/v6")
-        ;;&
-    "linux/arm/v7")
+    "linux/arm/v6" | "linux/arm/v7")
         INSTALLER="s6-overlay-armhf-installer"
         ;;
     "linux/arm64")
