Switching to put install script in tmp not etc Adding more output to install script Bumping to 1.0.1

--- a/install
+++ b/install
@@ -31,6 +31,10 @@ fi
 cd /tmp
 
 URL="https://github.com/just-containers/s6-overlay/releases/download/v$S6_VERSION/$INSTALLER"
-curl -L -o "$INSTALLER" "$URL" && chmod +x "$INSTALLER"
+echo "Downloading $URL" && curl -L -o "$INSTALLER" "$URL" && chmod +x "$INSTALLER"
 
+echo "Installing S6..."
 "./$INSTALLER" / && rm "$INSTALLER"
+echo "done"
+
+exit 0
