--- a/install
+++ b/install
@@ -31,11 +31,11 @@ cd /tmp
 
 URL="htps://github.com/just-containers/s6-overlay/releases/download/v${S6_VERSION}/${INSTALLER}"
 echo " - downloading ${URL}..."
-curl -L -o ${INSTALLER} ${URL} && chmod +x ${INSTALLER}
+curl -L -o "${INSTALLER}" "${URL}" && chmod +x "${INSTALLER}"
 echo " - done."
 
 echo "Installing S6..."
-"./${INSTALLER}" / && rm ${INSTALLER}
+"./${INSTALLER}" / && rm "${INSTALLER}"
 echo "done."
 
 exit 0
