Removing bash dependency

--- a/install
+++ b/install
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 
 #======================================================================================================================
 # Get correct installer for target platform
