--- a/install
+++ b/install
@@ -1,6 +1,16 @@
 #!/bin/sh
 
 #======================================================================================================================
+# Check for target platform
+#======================================================================================================================
+
+if [ -z "${TARGETPLATFORM}" ] ; then
+    echo " - target platform not set."
+    exit 1
+fi
+
+
+#======================================================================================================================
 # Get correct installer for target platform
 #======================================================================================================================
 
@@ -18,7 +28,7 @@ case "${TARGETPLATFORM}" in
 esac
 
 if [ -z "${INSTALLER}" ] ; then
-    echo "Unsupported target platform: ${TARGETPLATFORM}"
+    echo " - unsupported target platform: ${TARGETPLATFORM}"
     exit 1
 fi
 
